# OS-SideCar

./: .gitignore  README.md  debug_beneficial.py  debug_recommendation.py  debug_shape_mismatch.py  pyproject.toml  real_world_benchmark.py  run_champsim_sim.py  sweep_thresholds.py
ac_moe_ga_sidecar/: __init__.py  ab_benchmark.py  behavioral_eval.py  bitnet_config.py  bitnet_layers.py  bitnet_model.py  bitnet_state_heads.py  bitnet_training.py  config.py  core.py  encoders.py  evaluation.py  experts.py  feature_extraction.py  final_evaluation.py  inference.py  margin_curve.py  model.py  output_heads.py  real_world_simulation.py  runtime_state.py  state_plane.py  training.py  types.py  utils.py  utils_fixed.py  workload_generators.py
champsim_integration/: __init__.py  cache_model.py  calibration.py  event_bridge.py  metrics.py  online_learner.py  simulator.py  synthetic_traces.py  trace_parser.py
tests/: __init__.py  test_config.py  test_inference.py  test_integration.py  test_model.py  test_runtime_state.py
traces/: hotcold.champsimtrace
